// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it renders correctly when it has cards 1`] = `
<form
  onKeyDown={[Function]}
  onReset={[Function]}
  onSubmit={[Function]}
>
  <div
    className="root"
  >
    <div
      className="entryForm"
    >
      <div
        className="card"
      >
        <div
          className="root"
        >
          <label
            className="label"
            htmlFor="card"
          >
            Gift Card Number
          </label>
          <div
            className="card_input_container"
          >
            <span
              className="root"
              style={
                Object {
                  "--iconsAfter": 0,
                  "--iconsBefore": 0,
                }
              }
            >
              <span
                className="input"
              >
                <input
                  className="input"
                  disabled={false}
                  id="card"
                  name="card"
                  onBlur={[Function]}
                  onChange={[Function]}
                  placeholder="Enter card number"
                  value=""
                />
              </span>
              <span
                className="before"
              />
              <span
                className="after"
              />
            </span>
            <p
              className="root"
            />
          </div>
        </div>
        <div
          className="root"
        >
          <label
            className="label"
          />
          <button
            className="root_secondary_medium"
            disabled={false}
            onClick={[MockFunction]}
            onDragStart={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            type="button"
          >
            <span
              className="content"
            >
              <span
                className="text"
              >
                <mock-FormattedMessage
                  defaultMessage="Apply"
                  id="giftCards.apply"
                />
              </span>
            </span>
          </button>
        </div>
        <button
          className="check_balance_button"
          disabled={false}
          onClick={[MockFunction]}
          onDragStart={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          type="button"
        >
          <span
            className="content"
          >
            <span
              className="text"
            >
              <mock-FormattedMessage
                defaultMessage="Check balance"
                id="giftCards.checkBalance"
              />
            </span>
          </span>
        </button>
      </div>
    </div>
    <div
      className="cards_container"
    >
      <div
        className="card_info"
      >
        <span
          className="code"
        >
          unit test code 1
        </span>
        <span
          className="balance"
        >
          <mock-FormattedMessage
            defaultMessage="Balance: "
            id="giftCard.balance"
          />
          <span>
            $
          </span>
          <span>
            99
          </span>
          <span>
            .
          </span>
          <span>
            00
          </span>
        </span>
      </div>
      <button
        className="root_tertiary_small"
        disabled={false}
        onClick={[Function]}
        onDragStart={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        type="button"
      >
        <span
          className="content"
        >
          <span
            className="text"
          >
            <mock-FormattedMessage
              defaultMessage="Remove"
              id="giftCard.remove"
            />
          </span>
        </span>
      </button>
      <div
        className="card_info"
      >
        <span
          className="code"
        >
          unit test code 2
        </span>
        <span
          className="balance"
        >
          <mock-FormattedMessage
            defaultMessage="Balance: "
            id="giftCard.balance"
          />
          <span>
            $
          </span>
          <span>
            99
          </span>
          <span>
            .
          </span>
          <span>
            00
          </span>
        </span>
      </div>
      <button
        className="root_tertiary_small"
        disabled={false}
        onClick={[Function]}
        onDragStart={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        type="button"
      >
        <span
          className="content"
        >
          <span
            className="text"
          >
            <mock-FormattedMessage
              defaultMessage="Remove"
              id="giftCard.remove"
            />
          </span>
        </span>
      </button>
    </div>
  </div>
</form>
`;

exports[`it renders correctly with no cards 1`] = `
<form
  onKeyDown={[Function]}
  onReset={[Function]}
  onSubmit={[Function]}
>
  <div
    className="root"
  >
    <div
      className="entryForm"
    >
      <div
        className="card"
      >
        <div
          className="root"
        >
          <label
            className="label"
            htmlFor="card"
          >
            Gift Card Number
          </label>
          <div
            className="card_input_container"
          >
            <span
              className="root"
              style={
                Object {
                  "--iconsAfter": 0,
                  "--iconsBefore": 0,
                }
              }
            >
              <span
                className="input"
              >
                <input
                  className="input"
                  disabled={false}
                  id="card"
                  name="card"
                  onBlur={[Function]}
                  onChange={[Function]}
                  placeholder="Enter card number"
                  value=""
                />
              </span>
              <span
                className="before"
              />
              <span
                className="after"
              />
            </span>
            <p
              className="root"
            />
          </div>
        </div>
        <div
          className="root"
        >
          <label
            className="label"
          />
          <button
            className="root_secondary_medium"
            disabled={false}
            onClick={[MockFunction]}
            onDragStart={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            type="button"
          >
            <span
              className="content"
            >
              <span
                className="text"
              >
                <mock-FormattedMessage
                  defaultMessage="Apply"
                  id="giftCards.apply"
                />
              </span>
            </span>
          </button>
        </div>
        <button
          className="check_balance_button"
          disabled={false}
          onClick={[MockFunction]}
          onDragStart={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          type="button"
        >
          <span
            className="content"
          >
            <span
              className="text"
            >
              <mock-FormattedMessage
                defaultMessage="Check balance"
                id="giftCards.checkBalance"
              />
            </span>
          </span>
        </button>
      </div>
    </div>
  </div>
</form>
`;
